@@ -1,6 +1,7 @@
 Revision history for Mojo-UserAgent-CookieJar-ChromeMacOS
 
 {{$NEXT}}
+        - support v11 and Linux keyring
 
 0.02  2022-02-15 16:57:29 CST
         - copy SQLite file to read
